# flowstate

./: .gitignore  AGENTS.md  Cargo.toml  FLOW_GPUI_COMPONENT_ARCHITECTURE.md  README.md  ULTRALONG_OPTIMIZATION_OPPORTUNITIES.md  clippy  flow.md
.agents/skills/rust-performance-optimization/: SKILL.md
.githooks/: pre-commit
crates/flowstate-document/: Cargo.toml
crates/flowstate-document/src/: collaboration.rs  demo.rs  lib.rs
crates/flowstate-docx/: Cargo.toml
crates/flowstate-docx/src/: cleaner.rs  interpreter.rs  lib.rs
crates/flowstate-flow/: Cargo.toml
crates/flowstate-flow/src/: actions.rs  document.rs  history.rs  lib.rs  persistence.rs  styles.rs
crates/flowstate-tub/: Cargo.toml
data/: demo.db8.recovery  ultra_long.db8  ultra_long.db8.recovery
demo/: demo_document.db8
helpers/demo/: demo_document.db8
scripts/: register_windows_file_associations.ps1
src/: app.rs  app_settings.rs  commands.rs  file_search.rs  lib.rs  main.rs  rich_text_element.rs
src/app_settings/: io.rs  mod.rs  path.rs  schema.rs  theme_conversion.rs
src/commands/: keymap.rs
src/docx_conversion/: cleaner.rs  interpreter.rs  mod.rs
src/flow/: editor.rs  panel.rs  ribbon.rs
src/ribbon/: editor_ribbon.rs  mod.rs
src/rich_text_element/: benchmarks.rs  collaboration.rs  demo.rs  document.rs  edit_ops.rs  editor.rs  element.rs  invisibility.rs  layout.rs  mod.rs  paint.rs  persistence.rs  selection.rs  tests.rs  tools.rs
src/workspace/: document_panel.rs  file_management.rs  file_search_overlay.rs  icons.rs  mod.rs  toolkit_panel.rs  workspace.rs
(+119 files in other folders)
