[package]
name = "flowstate-docx"
version = "0.1.0"
edition = "2024"

[dependencies]
flowstate-document = { path = "../flowstate-document" }
hotpath = "0.16.1"
rdocx = "0.1.2"
rdocx-opc = "0.1.2"
rdocx-oxml = "0.1.2"
rustc-hash = "2.1.2"

[target.'cfg(any(target_os = "macos", target_os = "linux"))'.dependencies]
hotpath-cpu-support = { package = "hotpath", version = "0.16.1", features = ["hotpath-cpu"], optional = true }

[features]
hotpath = ["hotpath/hotpath", "flowstate-document/hotpath"]
hotpath-cpu = ["hotpath", "dep:hotpath-cpu-support", "flowstate-document/hotpath-cpu"]
hotpath-alloc = ["hotpath", "hotpath/hotpath-alloc", "flowstate-document/hotpath-alloc"]
